syntax = "proto3";

//cara generate protonya kalo dari luar
//protoc book/bookpb/book.proto --go_out=plugins=grpc:.

//kalo beda folder wajib tambahin package dan go_package
package book;
option go_package = "bookpb";


message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  bool is_read = 4;
}

message GetBookRequest {Book book = 1;}

message GetBookResponse {
    bool status = 1;
    Book data  = 2;
}


//service
service BoookService {
    rpc GetBook(GetBookRequest) returns (GetBookResponse) {};
}